style.css
/* ... */
.image-2 {
  display: none;
}

@media(min-width: 1600px) {
  .heading {
    font-size: 102px;
  }
  .bg-cta{
    max-width: 100%;
  }
}

@media (max-width: 1024px) {
  .oyn-row.nav-row {
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  .menu-items.nav-menu {
    position: fixed;
    z-index: 999;
    left: 0%;
    top: 60px;
    right: 0%;
    bottom: 0%;
    width: 100%;
    /* display */
    height: 0;
    overflow: hidden;
    transition: all 0.5s ease;
    /* display */
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    background-color: rgba(8, 21, 33, 0.9);
  }

  .menu-items.nav-menu.is-open{
    height: calc(100vh - 60px);
  }

  .menu-item {
    padding-right: 0px;
    padding-bottom: 42px;
    color: #fff;
    font-size: 32px;
  }
  .navbar {
    display: block;
  }
  .banner.oyn-section {
    overflow: visible;
    height: auto;
    max-height: none;
  }
  .sub-head {
    max-width: 80%;
    margin-right: auto;
    margin-left: auto;
  }
  .bg-cta {
    top: 50%;
    display: none;
    width: 84%;
    max-width: none;
    -webkit-transform: rotate(0deg) translate(-50%, -50%);
    -ms-transform: rotate(0deg) translate(-50%, -50%);
    transform: rotate(0deg) translate(-50%, -50%);
    -o-object-fit: fill;
    object-fit: fill;
  }
  .bg-cta.final-sell {
    display: none;
  }
  .cta {
    max-width: 70%;
    margin-top: 62px;
    margin-right: auto;
    margin-left: auto;
    padding-top: 42px;
    padding-bottom: 0px;
    background-image: none;
    background-size: auto;
    background-repeat: repeat;
  }
  .form {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .form-select {
    margin-right: 0px;
    margin-bottom: 32px;
  }
  .form-submit {
    margin-top: 62px;
    margin-right: -32px;
    margin-left: -32px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    background-color: #6fcf97;
    color: #081521;
    text-align: center;
    letter-spacing: 0.7px;
  }
  .banner-cta {
    margin-top: 90px;
    margin-right: -1.5rem;
    margin-left: -1.5rem;
    background-image: url("https://uploads-ssl.webflow.com/5d5cb8f69a3f3868b509de3d/5df7691b35688cf7cd1899eb_squigglefull%20(1).png");
    background-position: 50% 0%;
    background-size: 158%;
    background-repeat: no-repeat;
    background-attachment: scroll;
  }
  .banner-cta.final-sell {
    margin-bottom: 0px;
    padding-bottom: 52px;
  }
  .grid-work {
    grid-auto-flow: row;
    grid-column-gap: 58px;
    grid-row-gap: 62px;
    -ms-grid-rows: auto 62px auto 62px auto;
    grid-template-areas: "Area" "Area" "Area";
    -ms-grid-columns: 1.5fr;
    grid-template-columns: 1.5fr;
  }
  .work-project._1 {
    min-height: 400px;
  }
  .work-title {
    margin-bottom: -32px;
    padding: 24px 32px 18px 24px;
  }
  .work-title.is-small {
    padding: 24px 32px 18px 24px;
  }
  .text-block-2 {
    font-size: 52px;
  }
  .text-block-3 {
    margin-bottom: 4px;
    font-size: 32px;
  }
  .stat.d-none {
    display: none;
  }
  .testimonials {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
  }
  .testimony {
    max-width: 80%;
    margin-right: 0px;
  }
  .testimony.no-margin.d-none {
    display: none;
  }
  .timeline-image {
    left: 0px;
  }
  .about-details {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .about-image {
    max-width: 100%;
    -o-object-fit: cover;
    object-fit: cover;
  }
  .grid-me {
    grid-auto-flow: row;
    grid-column-gap: 61px;
    grid-row-gap: 31px;
    -ms-grid-rows: auto 31px auto 31px auto 31px auto;
    grid-template-areas: "Area" "Area" "Area-2" "Area-2";
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
  .grid-client {
    grid-auto-flow: row;
    grid-column-gap: 24px;
    grid-template-areas: "Area" "Area-2" "Area-3";
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
    -ms-grid-rows: auto auto auto;
    grid-template-rows: auto auto auto;
  }
  .final-sell{
    margin-bottom: 20px;
  }
  .footer {
    padding-top: 0; 
    padding-bottom: 20px;
  }
  .info {
    position: static;
  }
  .grid-default {
    grid-auto-flow: row dense;
    grid-column-gap: 83px;
    grid-row-gap: 31px;
    grid-template-areas: ".";
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
  .grid-default.grid-title {
    grid-auto-flow: row;
    -ms-grid-columns: 5fr;
    grid-template-columns: 5fr;
  }
  .div-block {
    height: 500px;
  }
  .sticky-content {
    position: static;
  }
  .project-link {
    z-index: 999;
  }
  .image-2 {
    display: block;
    -o-object-fit: fill;
    object-fit: fill;
  }
}

@media screen and (min-width: 1040px){
  .mobile-only{
    display: none !important;
  }
}

@media (max-width: 767px) {
  .desktop-only{
    display: none !important;
  }
  .footer {
    padding-top: 20px;
    padding-bottom: 20px;
  }
  .chips {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .chip {
    margin-right: 0px;
    margin-bottom: 24px;
  }
}
/* ... */

